@@ -19,6 +19,7 @@ Version dev (expected 15/03/2012)
     * itwp.operaarte add tAltezza
     * Create the base for a rolling devel
     * devel add devel.html
+    * devel implement it in all classes
 
 Version 4.1.1 (08/03/2012)
     * Make c and p available for all classes
